t+mt:[[għadd]] ([[WT:EDIT|Assisted]]) <count#32754027>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Lithuanian: {{t|lt|skaičiuoti}}
 * Macedonian: {{t|mk|брои}}
 * Malay: {{t+|ms|kira}}, {{t+|ms|bilang}}, {{t+|ms|hitung}}
-* Maltese: {{t|mt|għadd}}
+* Maltese: {{t|mt|għadd}}, {{t|mt|għadd}}
 * Maore Comorian: {{t|swb|hisaɓu|tr=uhisabu|alt=uhisaɓu}}
 * Middle English: {{t|enm|counten}}
 * Mongolian: {{t|mn|тоолох}}
