--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -386,6 +386,8 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 # To be or make a bridge over something.
 #: ''With enough cable, we can '''bridge''' this gorge.''
 # To [[span]] as if with a bridge.
+#* '''2012''', Christoper Zara, ''Tortured Artists: From Picasso and Monroe to Warhol and Winehouse, the Twisted Secrets of the World's Most Creative Minds'', part 1, chapter 1, {{gbooks|q=bridged|id=HV4jKhjzMVYC|pg=28}}:
+#*:  The brooding, black-clad singer '''bridged''' a stark divide that emerged in the recording industry in the 1950s, as post-Elvis pop singers diverged into two camps and audiences aligned themselves with either the sideburned rebels of rock 'n' roll or the cowboy-hatted twangsters of country music.
 #: ''The two groups were able to '''bridge''' their differences.''
 # {{context|music|lang=en}} To [[transition]] from one piece or section of music to another without stopping.
 #: ''We need to '''bridge''' that [[jam]] into "The Eleven".''
