t+fa:[[مخیدن]] ([[WT:EDIT|Assisted]]) <creep#32766455>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -77,6 +77,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crē
 {{trans-mid}}
 * Japanese: {{t|ja|忍び寄る|tr=shinobi-yoru|sc=Jpan}}
 * Maori: {{t|mi|whakaninihi}}, {{t|mi|tapanihi}}
+* Persian: {{t+|fa|مخیدن|tr=maxidan|sc=fa-Arab}}
 * Portuguese: {{t+|pt|rastejar}}
 * Russian: {{t+|ru|кра́сться|impf|tr=krástʹsja}}
 * Scottish Gaelic: {{t|gd|èalaidh}}
