--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -334,18 +334,19 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Chinese:
 *: Mandarin: {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
 *: Min Nan: {{t|nan|liah8|sc=Hani}}
-* French: {{t+|fr|attraper}}
+* French: {{t+|fr|attraper}}, {{t+|fr|prendre}}
 * Friulian: {{t|fur|cjapâ}}
 * Georgian: {{t|ka|დაჭერა}}
 * German: {{t+|de|fangen}}
 * Italian: {{t+|it|agguantare}}, {{t|it|acchiappare}}, {{t|it|afferrare}}, {{t|it|chiappare}}
 * Japanese: {{t|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
 * Lombard: {{t|lmo|ciapà}}
+* Maore Comorian: {{t|swb|para|alt=upara}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Polish: {{t|pl|łapać|impf}}, {{t|pl|złapać|pf}}, {{t+|pl|schwytać|pf}}
-* Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
 * Romanian: {{t+|ro|prinde}}
 * Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
 * Sardinian:
