--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -37,7 +37,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 #*: Thy '''substance''', valued at the highest rate, / Cannot amount unto a hundred marks.
 #* {{w|Jonathan Swift}} (1667–1745)
 #*: We are destroying many thousand lives, and exhausting our '''substance''', but not for our own interest.
-# A chemical substance is a form of matter that has constant chemical composition and characteristic properties.
+# A form of matter that has constant chemical composition and characteristic properties.
 # [[drug|Drugs]] {{gloss|illegal narcotics}}
 #: {{usex|lang=en|'''substance''' abuse}}
 # {{context|theology|lang=en}} [[hypostasis|Hypostasis]].
