--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -85,6 +85,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Danish: {{t|da|bug|c}}
 * Dhivehi: {{t-needed|dv}}
 * Dutch: {{t+|nl|maag|f}}
+* Erzya: {{t|myv|пеке}}
 * Esperanto: {{t|eo|stomako}}
 * Estonian: {{t|et|kõht}}, {{t|et|magu}}
 * Ewe: {{t-needed|ee}}
@@ -217,6 +218,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 *: Mandarin: {{t+|cmn|腹部|tr=fùbù|sc=Hani}}, {{t+|cmn|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t+|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
+* Erzya: {{t|myv|пеке}}
 * Esperanto: {{t|eo|ventro}}
 * Estonian: {{t|et|kõht}}, {{t|et|magu}}
 * Finnish: {{t+|fi|maha}}, {{t+|fi|vatsa}}
