--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -1,6 +1,8 @@
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
 ==English==
 [[File:Kids in pajamas.jpg|right|thumb|Two boys in pajamas (sleepwear)]]
+{{wikipedia}}
+
 ===Alternative forms===
 * [[pyjamas]] {{qualifier|Australia|UK|Canada}}
 
@@ -12,11 +14,13 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * {{audio|en-us-pajamas.ogg|Audio (US)|lang=en}}
 
 ===Noun===
-{{wikipedia}}
 {{en-plural noun|sg=pajama}}
 
 # [[clothes|Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants/trousers.
 # Loose-fitting [[trousers]] worn by both sexes in various southern Asian countries including [[India]].
+
+====Usage notes====
+"pajamas" is chiefly a U.S. spelling, the rest of the English speaking world uses "pyjamas"
 
 ====Derived terms====
 * [[cat's pajamas]]
