--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -48,7 +48,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Asturian: {{t+|ast|puertu|m}}
 * Azeri: {{t|az|liman}}, {{t|az|port}}
 * Belarusian: {{t|be|порт|m|tr=port|sc=Cyrl}}, {{t|be|га́вань|f|sc=Cyrl}}
-* Bengali: {{t|bn|পোর্ট|tr=porţ|sc=Beng}}
+* Bengali: {{t|bn|পোর্ট|tr=porţ|sc=Beng}}, {{t+|bn|বন্দর|tr=bôndôr|sc=Beng}}
 * Bulgarian: {{t+|bg|порт|m|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
 * Burmese: {{t+|my|သင်္ဘောဆိပ်|sc=Mymr}}
 * Catalan: {{t+|ca|port|m}}
@@ -83,7 +83,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Korean: {{t+|ko|항구|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 * Kyrgyz: {{t|ky|порт|sc=Cyrl}}
 * Ladin: {{t|lld|port|m}}
-* Lao: {{t|lo|ທ່າ|sc=Laoo}}
+* Lao: {{t|lo|ທ່າ|sc=Laoo}}, {{t+|lo|ທ່າເຮືອ|sc=Laoo}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|ūsta|f}}
 * Latin: {{t|la|portus}}
@@ -92,6 +92,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
 * Malay: {{t|ms|pelabuhan}}
 * Malayalam: {{t+|ml|തുറമുഖം|sc=Mlym}}
+* Maltese: {{t|mt|port|m}}
 * Mongolian: {{t|mn|далайн боомт|sc=Cyrl}}
 * Neapolitan: {{t|nap|puorto}}
 * Norwegian:
@@ -119,13 +120,14 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Tamil: {{t|ta|துறைமுகம்|sc=Taml}}
 * Tatar: {{t|tt|порт|sc=Cyrl}}
 * Telugu: {{t+|te|ఓడరేవు|sc=Telu}}
-* Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
+* Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}, {{t+|th|ท่าเรือ|tr=tâa reua|sc=Thai}}, {{t+|th|ท่า|tr=tâa|sc=Thai}}
 * Turkish: {{t+|tr|liman}}
 * Turkmen: {{t|tk|port}}
 * Ukrainian: {{t|uk|порт|m|tr=port|sc=Cyrl}}, {{t|uk|га́вань|f|sc=Cyrl}}
 * Urdu: {{t|ur|بندرگاہ|m|tr=bandargāh|sc=ur-Arab}}, {{t|ur|پورٹ|tr=porṭ|sc=ur-Arab}}
 * Uzbek: {{t|uz|port}}, {{t|uz|bandargoh}}
 * Vietnamese: {{t+|vi|cảng}} ({{t|vi|港}})
+* Yiddish: {{t|yi|פּאָרט|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|town or city with a dock or harbour}}
