--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -89,7 +89,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Latin: {{t|la|portus|m}}
 * Latvian: {{t+|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
-* Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
+* Macedonian: {{t|mk|приста́ниште|n|sc=Cyrl}}
 * Malay: {{t|ms|pelabuhan}}
 * Malayalam: {{t+|ml|തുറമുഖം|sc=Mlym}}
 * Maltese: {{t|mt|port|m}}
