--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -127,7 +127,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Urdu: {{t|ur|بندرگاہ|m|tr=bandargāh|sc=ur-Arab}}, {{t|ur|پورٹ|tr=porṭ|sc=ur-Arab}}
 * Uzbek: {{t|uz|port}}, {{t|uz|bandargoh}}
 * Vietnamese: {{t+|vi|cảng}} ({{t|vi|港}})
-* Yiddish: {{t|yi|פּאָרט|sc=Hebr}}
+* Yiddish: {{t|yi|פּאָרט|sc=Hebr}}, {{t|yi|האַוון|m|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|town or city with a dock or harbour}}
