--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -68,7 +68,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n}}, {{t+|el|λιμένας|m}}
 * Hawaiian: {{t|haw|awa}}
-* Hebrew: {{t+|he|נָמֵל|m|tr=namél|sc=Hebr}}
+* Hebrew: {{t+|he|נָמֵל|m|tr=namél}}
 * Hindi: {{t|hi|बंदरगाह|m|sc=Deva}}, {{t|hi|पोर्ट|sc=Deva}}
 * Hungarian: {{t+|hu|kikötő}}
 * Icelandic: {{t+|is|höfn|f}}
@@ -127,7 +127,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Urdu: {{t|ur|بندرگاہ|m|tr=bandargāh|sc=ur-Arab}}, {{t|ur|پورٹ|tr=porṭ|sc=ur-Arab}}
 * Uzbek: {{t|uz|port}}, {{t|uz|bandargoh}}
 * Vietnamese: {{t+|vi|cảng}} ({{t|vi|港}})
-* Yiddish: {{t|yi|פּאָרט|sc=Hebr}}, {{t|yi|האַוון|m|sc=Hebr}}
+* Yiddish: {{t|yi|האַוון|m}}, {{t|yi|פּאָרט}}
 {{trans-bottom}}
 
 {{trans-top|town or city with a dock or harbour}}
