Reverted edits by [[Special:Contributions/50.122.58.35|50.122.58.35]]. If you think this rollback is in error, please leave a message on my talk page. <port#32790428>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -1,5 +1,4 @@
-Who ever made this is a idoit
-
+{{also|port|Port|port.|Port.|pórt|PORT}}
 ==English==
 {{wikipedia|dab=Port (disambiguation)|Port}}
 
