--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -463,19 +463,25 @@ From {{etyl|fro|fr}} {{m|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}
 
 ===Pronunciation===
 * {{hu-IPA}}
+* {{hyphenation|port|lang=hu}}
 
-===Noun===
+===Etymology 1===
+
+====Noun====
 {{hu-noun|ok}}
 
 # {{context|computing|lang=hu}} {{l|en|port}}
 
-====Declension====
+=====Declension=====
 {{hu-decl-ok|por|t|ot}}{{hu-pos-otok|port|j|jai}}
 
-===Noun===
+===Etymology 2===
+{{hu-suffix|por|t|nocat=y}}
+
+====Noun====
 {{head|hu|noun form}}
 
-# {{hu-inflection of|por|acc|s}}
+# {{inflection of|por||acc|s|lang=hu}}
 
 ----
 
