/* Translations */ moved translations of city sense to [[port city]] <port#32794280>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -130,38 +130,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Yiddish: {{t|yi|האַוון|m}}, {{t|yi|פּאָרט}}
 {{trans-bottom}}
 
-{{trans-top|town or city with a dock or harbour}}
-* Armenian: {{t|hy|նավահանգիստ}}
-* Catalan: {{t+|ca|port|m}}
-* Chinese:
-*: Mandarin: {{t+|cmn|港市|tr=gǎngshì|sc=Hani}}
-* Czech: {{t+|cs|přístav|m}}, {{t|cs|přístavní město|n}}
-* Dutch: {{t+|nl|havenstad|f}}
-* Finnish: {{t+|fi|satamakaupunki}}, {{t+|fi|satama}}
-* French: {{t+|fr|port|m}}
-* Galician: {{t+|gl|porto|m}}
-* German: {{t+|de|Hafenstadt|f}}
-* Greek: {{t+|el|λιμάνι|n}}
-* Hungarian: {{t+|hu|kikötőváros}}
-* Icelandic: {{t|is|hafnarborg|f}}
-* Ido: {{t+|io|portuo}}
-* Italian: {{t|it|città portuale|f}}
-{{trans-mid}}
-* Latvian: {{t|lv|ostas pilsēta|f}}
-* Lithuanian: {{t|lt|uostamiestis|m}}
-* Polish: {{t|pl|miasto portowe|n}}
-* Portuguese: {{t+|pt|porto|m}}
-* Romanian: {{t+|ro|port|n}}
-* Russian: {{t+|ru|порт|m|sc=Cyrl}}, {{t|ru|[[порто́вый]] [[го́род]]|m|sc=Cyrl}}
-* Scottish Gaelic: {{t|gd|port|m}}
-* Serbo-Croatian:
-*: Cyrillic: {{t|sh|лука|f}}
-*: Roman: {{t+|sh|luka|f}}
-* Spanish: {{t+|es|puerto|m}}
-* Swahili: {{t+|sw|bandari}}
-* Swedish: {{t+|sv|hamnstad|c}}
-* Turkish: {{l|tr|liman}} {{t|tr|kenti}}, {{t|tr|şehri}}
-{{trans-bottom}}
+{{trans-see|port city}}
 
 {{trans-see|left-hand side of a vessel|larboard}}
 
