--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -22,7 +22,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 #* {{quote-magazine|date=2013-06-08|volume=407|issue=8839|page=52|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/international/21579039-chinas-growing-empire-ports-abroad-mainly-about-trade-not-aggression-new-masters The new masters and commanders]
 |passage=From the ground, Colombo’s '''port''' does not look like much. Those entering it are greeted by wire fences, walls dating back to colonial times and security posts. For mariners leaving the '''port''' after lonely nights on the high seas, the delights of the B52 Night Club and Stallion Pub lie a stumble away.}}
-# A town or city containing such a place.
+# A town or city containing such a place, a [[port city]].
 # {{context|nautical|uncountable|lang=en}} The left-hand side of a [[vessel]], including aircraft, when one is facing the front. Port does not change based on the orientation of the person aboard the craft.
 
 =====Synonyms=====
