t+swb:[[lagua]] ([[WT:EDIT|Assisted]]) <speak#32794781>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -261,6 +261,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Italian: {{t+|it|parlare}}
 {{trans-mid}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
+* Maore Comorian: {{t|swb|lagua|alt=ulagua}}
 * Norman: {{t|nrf|pâler}}
 * Khmer: {{t+|km|និយាយ|tr=ni’yiey|sc=Khmr}}
 * Latvian: {{t+|lv|runāt}}
