/* Old French */ <substance#32797543>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -214,6 +214,9 @@ Borrowed from {{etyl|la|fr}} {{term|substantia||substance, essence|lang=la}}, fr
 * {{l|fro|sostance}}
 * {{l|fro|sustance}}
 
+===Etymology===
+Borrowed from {{etyl|la|fro}} {{m|la|substantia}}.
+
 ===Noun===
 {{fro-noun|f}}
 
