t+qu:[[parlay]] ([[WT:EDIT|Assisted]]) <speak#32800865>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -174,7 +174,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Polish: {{t+|pl|mówić|impf}}, {{t+|pl|rozmawiać|impf}}
 * Portuguese: {{t+|pt|falar}}
 * Punjabi: {{t|pa|ਬੋਲਣਾ|sc=Guru}}
-* Quechua: {{t+|qu|rimay}}
+* Quechua: {{t+|qu|rimay}}, {{t|qu|parlay}}
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
 * Romansch: {{t|rm|pledar}}, {{t|rm|tschantschar}}
 * Russian: {{t+|ru|говори́ть|impf}}, {{t+|ru|разгова́ривать|impf}}
