/* External links */added content <secretary#32804341>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -181,6 +181,8 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * {{R:Century 1911}}
 * {{R:OneLook}}
 
+[[Category:en:Furniture]]
+
 [[ar:secretary]]
 [[az:secretary]]
 [[cs:secretary]]
