Reverted edits by [[Special:Contributions/79.11.212.176|79.11.212.176]]. If you think this rollback is in error, please leave a message on my talk page. <saffron#32810068>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -1,5 +1,4 @@
-{{also|Saffrondistaminchiacagata}}
-
+{{also|Saffron}}
 ==English==
 [[Image:Crocus_sativus_sahuran.jpg|thumb|''Crocus sativus'']]
 [[Image:Iran saffron threads.jpg|thumb|Saffron (spice): the dried threads from the stigma of ''Crocus sativus'']]
