/* Translations */ translation tables for religion senses <flesh#32814285>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -149,6 +149,14 @@ From {{etyl|enm|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{m|ang|flǣs
 * Volapük: {{t+|vo|skin}}
 {{trans-bottom}}
 
+{{trans-top|(religion) mortal body}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|(religion) evil, sin, corruption}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|edible part of fruit/vegetable}}
 * Czech: {{t|cs|dužina|f}}
 * Danish: {{t+|da|kød}}, {{t|da|frugtkød}}
