/* Han character */ derived characters <坐#32814435>

--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -13,9 +13,12 @@
 # [[ride]], [[travel]] by
 # {{context|archaic|lang=mul}} to [[offend]], to [[violate]] (a decree or law)
 
+====Derived characters====
+* [[侳]], [[挫]], [[唑]], [[脞]], [[睉]], [[銼]] ([[锉]]), [[矬]], [[剉]], [[莝]], [[桽]], [[髽]], [[夎]], [[䦟]] ([[䦷]]), [[座]], [[痤]], [[趖]]
+
 ====References====
 <references/>
-* {{Han ref|kx=0225.150|dkj=04931|dj=0460.060|hdz=10423.120|uh=5750|ud=22352|bh=A7A4|bd=42916}}
+* {{Han ref|kx=0225.150|dkj=04931|dj=0460.060|hdz=10423.120|uh=5750}}
 
 ----
 
