Reverted edits by [[Special:Contributions/39.32.217.73|39.32.217.73]]. If you think this rollback is in error, please leave a message on my talk page. <tortoise#32814490>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -7,7 +7,7 @@
 
 ===Pronunciation===
 * {{IPA|/ˈtɔː(ɹ)təs/|lang=en}}
-* {{audio|en-us-tortoise.ogg|Audio (UK)|lang=en}}
+* {{audio|en-us-tortoise.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɔː(ɹ)təs|lang=en}}
 
 ===Noun===
