--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -217,7 +217,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Pashto: {{t|ps|راتلل|sc=ps-Arab}}
 * Persian: {{t+|fa|آمدن|tr=âmadan}}
 * Pipil: {{t|ppl|witz}}, {{t|ppl|huitz}}
-* Polish: {{t+|pl|przychodzić|impf}}, {{t+|pl|przyjść|pf}}; {{t|pl|przyjeżdżać|impf}}, {{t+|pl|przyjechać|pf}} {{qualifier|by transport}}
+* Polish: {{qualifier|on foot}} {{t+|pl|przychodzić|impf}}, {{t+|pl|przyjść|pf}};  {{qualifier|by vehicle}} {{t|pl|przyjeżdżać|impf}}, {{t+|pl|przyjechać|pf}}
 * Portuguese: {{t+|pt|vir}}
 * Quechua: {{t+|qu|hamuy}}
 * Rohingya: {{t|rhg|ai}}
