--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -98,6 +98,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Hebrew: {{t|he|למצוץ|tr=limtsots}}
 * Hindi: {{t|hi|चूसना|tr=cūsnā}}
 * Hungarian: {{t+|hu|szopik}}
+* Ido: {{t+|io|sugar}}
 * Indonesian: {{t+|id|isap}}
 * Irish: {{t|ga|súigh}}
 * Italian: {{t+|it|succhiare}}, {{t|it|suggere}}, {{t|it|ciucciare}}
