--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -125,6 +125,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 #: ''The lawyer took a '''cut''' of the profits.''
 # {{context|cricket|lang=en}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
 # {{context|cricket|lang=en}} [[sideways|Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
+# {{cx|sports|lang=en}} In [[lawn tennis]], etc., a slanting stroke causing the ball to spin and bound irregularly; also, the spin thus given to the ball.
 # The act or right of dividing a deck of playing cards.
 #: ''The player next to the dealer makes a '''cut''' by placing the bottom half on top.''
 # The manner or style a garment etc. is fashioned in.
