--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -46,6 +46,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * Armenian: {{t|hy|Իսրայել}}
 * Asturian: {{t+|ast|Israel}}
 * Azeri: {{t+|az|İsrail}}
+* Bashkir: {{t|ba|Израиль|sc=Cyrl}}
 * Belarusian: {{t|be|Ізра́іль|m}}
 * Bengali: {{t|bn|ইসরায়েল|tr=israyel}}
 * Breton: {{t|br|Israel}}
