--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -352,6 +352,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 {{trans-mid}}
 * Portuguese: {{t+|pt|tato|m}}
 * Spanish: {{t+|es|tacto|m}}
+* Swedish: {{t+|sv|yta}}, {{t+|sv|känsla}}
 {{trans-bottom}}
 
 {{trans-top|mental impression}}
@@ -369,6 +370,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 * Finnish: {{t+|fi|kosketus}}
 {{trans-mid}}
 * Spanish: {{t+|es|caricia|f}}
+* Swedish: {{t+|sv|beröring|c}}
 {{trans-bottom}}
 
 {{trans-top|vague understanding}}
