--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -216,15 +216,16 @@ From {{etyl|la|en}} {{term|porta||passage, gate|lang=la}}, reinforced in {{etyl|
 * Armenian: {{t|hy|միացք|sc=Armn}}
 * Belarusian: {{t|be|порт|m|sc=Cyrl}}
 * Chinese:
-*: Mandarin: {{t+|cmn|端口|tr=duānkǒu|sc=Hani}}
+*: Cantonese: {{t|yue|端口|tr=dyun1 hau2|sc=Hani}}, {{t|yue|埠|tr=fau6|sc=Hani}}, {{t|yue|接口|tr=zip3 hau2|sc=Hani}}
+*: Mandarin: {{t+|cmn|端口|tr=duānkǒu|sc=Hani}}, {{t+|cmn|接口|tr=jiēkǒu|sc=Hani}} {{qualifier|mainland China}}, {{t+|cmn|埠|tr=bù|sc=Hani}} {{qualifier|Taiwan}}
 * Dutch: {{t+|nl|poort}}
 * Estonian: {{t+|et|port}}
 * Finnish: {{t+|fi|portti}}
 * French: {{t+|fr|port|m}}
 * Galician: {{t+|gl|porto|m}}
 * German: {{t+|de|Port|m}}
-* Greek: {{t+|el|θύρα|f}}
 {{trans-mid}}
+* Greek: {{t+|el|θύρα|f}}
 * Japanese: {{t+|ja|ポート|tr=pōto}}
 * Korean: {{t|ko|포트|sc=Kore}}
 * Portuguese: {{t+|pt|porta|f}}
