/* Translations */ Japanese 駒 <bridge#32835042>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -370,6 +370,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Greek: {{t+|el|καβαλάρης|m}}
 *: Ancient: {{t|grc|δόναξ|sc=polytonic}}
 * Irish: {{t+|ga|droichead|m}}
+* Japanese: {{t+|ja|駒|tr=こま, koma|sc=Jpan}}
 * Macedonian: {{t|mk|кобилица|f|sc=Cyrl}}
 * Persian: {{t+|fa|خرک|tr=xarak|sc=fa-Arab}}
 * Portuguese: {{t+|pt|cavalete|m}}
