t+yi:[[רעדן]] ([[WT:EDIT|Assisted]]) <speak#32835400>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -273,6 +273,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Russian: {{t+|ru|говорить|sc=Cyrl}}
 * Spanish: {{t+|es|hablar}}
 * Swedish: {{t+|sv|tala}}
+* Yiddish: {{t+|yi|רעדן|tr=redn|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|to utter}}
