--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -7,29 +7,27 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}.
 * {{a|IL}} {{IPA|/ˈeret͡s/|lang=he}}
 
 ===Noun===
-{{he-noun|g=f|tr=érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ־|plcons=ארצות|plconswv=אַרְצוֹת־|pausalwv=אָרֶץ|pausaltr=árets}}
+{{he-noun|g=f|tr='érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ־|plcons=ארצות|plconswv=אַרְצוֹת־|pausalwv=אָרֶץ}}
 
 # [[country]], [[land]]
 # [[territory]], [[district]], [[region]]
 # [[earth]], [[Earth]]
 #* {{RQ:Tanach|1|1|1|t=JPS}}
-#*: {{lang|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ'''׃}}
-#*:: ''b'reshít bará 'elohím 'ét hashamáyim v'ét '''ha'árets'''.''
-#*:: In the beginning God created the heaven and '''the earth'''.
+#*: {{ux|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ'''׃|tr=b'reshít bará 'elohím 'ét hashamáyim v'ét '''ha'árets'''.|In the beginning God created the heaven and '''the earth'''.}}
 # [[ground]], [[soil]]
 # {{context|definite|popular|lang=he}} [[Israel]]
 
 =====Usage notes=====
-* The definite form of this noun is {{term|sc=Hebr|lang=he|הָאָרֶץ|tr=haárets}}.
+* The definite form of this noun is {{m|he|הָאָרֶץ|tr=ha'árets}}.
 
 ====Synonyms====
-* {{l|he|אדמה|tr=adamá}}
+* {{l|he|אֲדָמָה|tr='adamá}}
 
 ====Related terms====
-* {{l|he|אַרְצִי|tr=artsí}}
+* {{l|he|אַרְצִי|tr='artsí}}
 
 ====See also====
-* {{l|he|מדינה|tr=m'diná}}
+* {{l|he|מְדִינָה|tr=m'diná}}
 
 [[ar:ארץ]]
 [[el:ארץ]]
