--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -1,7 +1,7 @@
 ==Hebrew==
 
 ===Etymology===
-From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}.
+From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}. Compare {{etyl|ar|-}} {{m|ar|أَرْض}} and {{etyl|arc|-}} {{m|arc|אַרְעָא}}.
 
 ===Pronunciation===
 * {{a|IL}} {{IPA|/ˈeret͡s/|lang=he}}
