added "Cantonese" section with /yue-hanzi/ (and associated jyutping & Cantonese Yale info) and /defn|lang=yue|sort=无07/ templates <旣#32837376>

--- a/en/旣/旣.16908.wikitext
+++ b/en/旣/旣.16908.wikitext
@@ -14,6 +14,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[gei3]]|y=gei3}}
+
+# {{defn|lang=yue|sort=无07}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
