--- a/en/旤/旤.16909.wikitext
+++ b/en/旤/旤.16909.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=71|rad=无|as=09|sn=13|four=|canj=月月一女山 (BBMVU)}}
+{{Han char|rn=71|rad=无|as=09|sn=13|four=|canj=月月一女山 (BBMVU)|ids=⿰[[咼]][[旡]]}}
 
 # {{defn|Han|sort=无09}}
 
