--- a/en/旤/旤.16909.wikitext
+++ b/en/旤/旤.16909.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[wo6]]|y=wo6}}
+
+# {{defn|lang=yue|sort=无09}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 121]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
