--- a/en/旤/旤.16909.wikitext
+++ b/en/旤/旤.16909.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[huò]] ([[huo4]]), [[mì]] ([[mi4]])|wg=huo<sup>4</sup>, mi<sup>4</sup>}}
+{{cmn-hanzi|pin=[[huò]] ([[huo4]])|wg=huo<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=无09}}
 
