--- a/en/旪/旪.16914.wikitext
+++ b/en/旪/旪.16914.wikitext
@@ -1,11 +1,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=02|sn=6|four=|canj=日十 (AJ), X日十 (XAJ)}}
+{{Han char|rn=72|rad=日|as=02|sn=6|four=|canj=日十 (AJ), X日十 (XAJ)|ids=⿰[[日]][[十]}}
 
-# united in
+# [[united]] in
 # [[agreement]]
-# mutual aid
+# [[mutual]] [[aid]]
 
 ====References====
 * {{Han ref|kx=0489.130|dkj=13743|dj=0850.100|hdz=21483.050|uh=65EA|ud=26090}}
