--- a/en/旪/旪.16914.wikitext
+++ b/en/旪/旪.16914.wikitext
@@ -12,6 +12,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[hip3]]|y=hip3}}
+
+# {{defn|lang=yue|sort=日02}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
