--- a/en/旫/旫.16915.wikitext
+++ b/en/旫/旫.16915.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=02|sn=6|four=|canj=日尸竹 (ASH)}}
+{{Han char|rn=72|rad=日|as=02|sn=6|four=|canj=日尸竹 (ASH)|ids=⿰[[日]][[刀]]}}
 
 # {{defn|Han|sort=日02}}
 
