--- a/en/旫/旫.16915.wikitext
+++ b/en/旫/旫.16915.wikitext
@@ -3,10 +3,12 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=|canj=日尸竹 (ASH)|ids=⿰[[日]][[刀]]}}
 
-# {{defn|Han|sort=日02}}
+# [[dark]]
+# [[night]]
 
 ====References====
 * {{Han ref|kx=0489.150|dkj=13745|dj=0850.120|hdz=21486.030|uh=65EB|ud=26091}}
+*[http://chardb.iis.sinica.edu.tw/char/U+65EB International Encoded Han Character and Variants Database]
 
 ----
 
