--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -65,7 +65,7 @@
 {{attention|vi|check definition}}
 
 ===Han character===
-{{vi-hantu|[[tuần]]|rs=日02}}
+{{vi-readings|[[tuần]]|rs=日02}}
 
 # {{han tu form of|tuần}}
 
