converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <旭#32848972>

--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -13,12 +13,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[juk1]]|y=yuk1}}
+===Pronunciation===
+{{zh-pron
+|m=xù
+|c=juk1
+|mc=y
+|oc=y
+|ma=
+|cat=n,a
+}}
 
-# {{defn|lang=yue|sort=日02}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -54,15 +63,8 @@
 
 ----
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xù]] ([[xu4]])|wg=hsü<sup>4</sup>}}
-# {{defn|lang=cmn|sort=日02}}
-
-----
-
 ==Vietnamese==
+
 ===Han character===
 {{vi-hantu|[[hóc]], [[húc]]|rs=日02}}
 
