--- a/en/旮/旮.16918.wikitext
+++ b/en/旮/旮.16918.wikitext
@@ -23,7 +23,8 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xù]] ([[xu4]])|wg=hsü<sup>4</sup>}}, [[gā]]
+{{cmn-hanzi|pin=[[gā]] ([[ga1]]), [[xù]] ([[xu4]])|wg=ka<sup>1</sup>, hsü<sup>4</sup>}}
+
 # {{defn|lang=cmn|sort=日02}}
 
 ====Compounds====
