--- a/en/旯/旯.16919.wikitext
+++ b/en/旯/旯.16919.wikitext
@@ -24,10 +24,23 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[lá]] ([[la2]]), [[xù]] ([[xu4]])|wg=la<sup>2</sup>, hsü<sup>4</sup>}}
+
 # {{defn|lang=cmn|sort=日02}}
 
 ====Compounds====
 *[[旮旯]]
+
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=日02| hanviet = lạp}}
+
+# {{defn|lang=vi|sort=日02}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=65ef Nom Foundation]
 
 [[fr:旯]]
 [[mg:旯]]
