--- a/en/旰/旰.16920.wikitext
+++ b/en/旰/旰.16920.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=gon3}}
+{{yue-hanzi|jyut=[[gon3]], [[hon6]]|y=gon3, hon6}}
 
 # {{defn|lang=yue|sort=日03}}
 
