--- a/en/旲/旲.16922.wikitext
+++ b/en/旲/旲.16922.wikitext
@@ -7,18 +7,39 @@
 
 ====References====
 * {{Han ref|kx=0490.070|dkj=13753|dj=0851.080|hdz=21487.050|uh=65F2|ud=26098|bh=CAFB|bd=51963}}
+*[http://www.zdic.net/z/1b/js/65F2.htm zdic.net (Han Dian)]
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[toi4]]|y=toi4}}
+===Pronunciation 1===
+{{zh-pron
+|m=tái
+|c=toi4
+|mc=
+|oc=
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=日03}}
+===Definitions===
+# [[daylight]]
+# [[sunlight]]
 
 ====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+===Pronunciation 2===
+{{zh-pron
+|m=yīng
+|c=
+|cat=a
+}}
+
+===Definitions===
+# [[big]], [[great]], [[vast]], [[large]], [[high]]
 
 ----
 
@@ -40,15 +61,6 @@
 {{ko-hanja|hangeul=대|eumhun=|rv=dae|mr=tae|y=tay}}
 
 # {{defn|lang=ko|sort=日03}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tái]] ([[tai2]])|wg=t'ai<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日03}}
 
 [[fr:旲]]
 [[li:旲]]
