converted "Cantonese" and "Mandarin" sections into unified "Chinese" section with three separate "Pronunciation" (L3) and "Definitions" (L3) sections; added zdic.net reference link; added /also|的/ template <旳#32849051>

--- a/en/旳/旳.16923.wikitext
+++ b/en/旳/旳.16923.wikitext
@@ -1,3 +1,4 @@
+{{also|的}}
 ==Translingual==
 
 ===Han character===
@@ -7,24 +8,62 @@
 
 ====References====
 * {{Han ref|kx=0490.130|dkj=13760|dj=0851.140|hdz=21487.150|uh=65F3|ud=26099|bh=CAFA|bd=51962}}
+*[http://www.zdic.net/z/1b/js/65F3.htm zdic.net (Han Dian)]
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[dik1]]|y=dik1}}
+===Pronunciation 1===
+{{zh-pron
+|m=de,di
+|ma=y
+|m_note=di is used in poetry, songs
+|c=dik1
+|c_note=only in formal writing, vernacular particle = {{zh-l|嘅}}
+|mn=ê
+|mn_note=cognate
+|mc=
+|oc=
+|cat=part
+}}
 
-# {{defn|lang=yue|sort=日03}}
+===Definitions===
+{{zh-hanzi}}
 
-----
+# {{cx|Beginning Mandarin|lang=zh}} {{non-gloss definition|Used after an attribute. Indicates that the previous word has [[possessive|possession]] of the next one. In English it functions like [['s|’s]] (or like the word “[[of]]” but with the position of [[possessor]] and [[possessee]] switched.)}} [['s|’s]] , [[of]]
 
-==Mandarin==
+===Pronunciation 2===
+{{zh-pron
+|m=dí
+|ma=y
+|c=dik1
+|h=pfs=tit
+|mn=tek
+|w=4tiq
+|cat=adv
+}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[dì]] ([[di4]])|wg=ti<sup>4</sup>}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=cmn|sort=日03}}
+# [[really]]
+# [[truly]]
+
+===Pronunciation 3===
+{{zh-pron
+|m=dì
+|ma=y
+|c=dik1
+|cat=n
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# [[target]]
+# [[objective]]
 
 [[fr:旳]]
 [[pl:旳]]
