--- a/en/旴/旴.16924.wikitext
+++ b/en/旴/旴.16924.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[heoi1]]|y=heui1}}
+
+# {{defn|lang=yue|sort=日03}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
