--- a/en/旴/旴.16924.wikitext
+++ b/en/旴/旴.16924.wikitext
@@ -47,6 +47,15 @@
 
 # {{defn|lang=cmn|sort=日03}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=日03| hanviet = hù}}
+
+# {{defn|lang=vi|sort=日03}}
+
 [[fr:旴]]
 [[ko:旴]]
 [[hu:旴]]
