--- a/en/旵/旵.16925.wikitext
+++ b/en/旵/旵.16925.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[hǎn]] ([[han3]])|wg=h'an<sup>3</sup>}}
+{{cmn-hanzi|pin=[[chǎn]] ([[chan3]])|wg=ch'an<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=日03}}
 
