--- a/en/旵/旵.16925.wikitext
+++ b/en/旵/旵.16925.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=03|sn=7|four=6077<sub>0</sub>|canj=日山 (AU), X日山 (XAU)}}
+{{Han char|rn=72|rad=日|as=03|sn=7|four=6077<sub>0</sub>|canj=日山 (AU), X日山 (XAU)|ids=⿱[[日]][[山]]}}
 
 # [[日光照也]]
 
