--- a/en/旵/旵.16925.wikitext
+++ b/en/旵/旵.16925.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[caam2]]|y=chaam2}}
+
+# {{defn|lang=yue|sort=日03}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Japanese==
 
 ===Kanji===
