/* Translingual */ added "ids=" ⿰日广 (composition) data to /Han char/ template <旷#32849162>

--- a/en/旷/旷.16927.wikitext
+++ b/en/旷/旷.16927.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=日戈 (AI)}}
+{{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=日戈 (AI)|ids=⿰[[日]][[广]]}}
 
 # [[extensive]], [[wide]], [[broad]]
 # [[empty]]
