converted "Mandarin" section into unified "Chinese" section and redirected to traditional character article using /zh-see/ template <旸#32849168>

--- a/en/旸/旸.16928.wikitext
+++ b/en/旸/旸.16928.wikitext
@@ -14,12 +14,8 @@
 
 ----
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=暘|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日03}}
+==Chinese==
+{{zh-see|暘}}
 
 [[fr:旸]]
 [[pl:旸]]
