--- a/en/旹/旹.16929.wikitext
+++ b/en/旹/旹.16929.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[si4]]|y=si4}}
+
+# {{defn|lang=yue|sort=日04}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
