/* Translingual */ removed "be alive and kicking" definition from fourth definition entry; added "ids=" ⿰日王 (composition) data to /Han char/ template <旺#32850877>

--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -2,12 +2,12 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6101<sub>4</sub>|canj=日一土 (AMG)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6101<sub>4</sub>|canj=日一土 (AMG)|ids=⿰[[日]][[王]]}}
 
 # [[prosper]]
 # [[prosperous]], [[thriving]] condition 
 # [[increase]]
-# full of [[vigor]], [[energetic]], be alive and kicking
+# full of [[vigor]], [[energetic]]
 # [[excellent]]
 
 ====References====
