--- a/en/旼/旼.16932.wikitext
+++ b/en/旼/旼.16932.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[man4]]|y=man4}}
+
+# {{defn|lang=yue|sort=日04}}
+
+----
+
 ==Korean==
 
 ===Hanja===
