--- a/en/旽/旽.16933.wikitext
+++ b/en/旽/旽.16933.wikitext
@@ -22,7 +22,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[tūn]] ([[tun1]])|wg=t'un<sup>1</sup>}}
+{{cmn-hanzi|pin=[[tùn]] ([[tun4]])|wg=t'un<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=日04}}
 
