--- a/en/偓/偓.11107.wikitext
+++ b/en/偓/偓.11107.wikitext
@@ -24,7 +24,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# [[fuss]]
 
 ====Readings====
 * {{ja-readings|on=[[あく]] (aku)|kun=[[かかはるさま]] (kakaharusama)}}
