--- a/en/偓/偓.11107.wikitext
+++ b/en/偓/偓.11107.wikitext
@@ -36,7 +36,10 @@
 ===Hanja===
 {{ko-hanja|hangeul=악|rv=ak|mr=ak}}
 
-# {{defn|lang=ko|sort=人09}}
+# narrow-mindedness
+# wickedness
+# stubbornness
+# tenacity
 
 ----
 
