--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -400,6 +400,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 |title=[http://www.theguardian.com/global-development/2013/aug/10/china-india-water-grab-dams-himalayas-danger Dams endanger ecology of Himalayas]
 |passage=Most of the Himalayan rivers have been relatively untouched by dams near their sources. Now the two great Asian powers, India and China, are rushing to harness them as they '''cut''' through some of the world's deepest valleys.}}
 # {{lb|en|transitive|cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it. {{rfex}}
+# {{lb|en|transitive|cricket}} To [[deflect]] (a bowled ball) to the [[off]], with a chopping movement of the [[bat]].
 # {{lb|en|intransitive}} To change [[direction]] suddenly.
 #: {{ux|en|The football player '''cut''' to his left to evade a tackle.}}
 # {{lb|en|transitive|intransitive}} To [[divide]] a [[pack]] of [[playing card]]s into two.
