--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -35,6 +35,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 {{trans-top|person keeping records and handling clerical work}}
 * Arabic: {{t|ar|سكرتير|m|tr=sikritér}}, {{t+|ar|سكرتيرة|f|tr=sikritéra}}
 * Armenian: {{t+|hy|քարտուղար|tr=kʿartułar|sc=Armn}}, {{qualifier|female}} {{t+|hy|քարտուղարուհի|tr=kʿartułaruhi|sc=Armn}}
+* Bashkir: {{t|ba|сәркәтип|sc=Cyrl}}
 * Basque: {{t|eu|idazkari}}
 * Bulgarian: {{t+|bg|секрета́р|m|tr=sekretár}}, {{t|bg|секрета́рка|f|tr=sekretárka}}
 * Chechen: {{t|ce|йозанча|sc=Cyrl}}
