--- a/en/旾/旾.16934.wikitext
+++ b/en/旾/旾.16934.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=心山日 (PUA)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=心山日 (PUA)|ids=⿱[[屯]][[日]]}}
 
 # {{defn|Han|sort=日04}}
 
