t+ka:[[გადაწყვეტა]] ([[WT:EDIT|Assisted]]) <choose#32855251>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -199,6 +199,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Finnish: {{t|fi|[[päättää]] [[tehdä]]}}
 * French: {{t+|fr|décider}}
 * Galician: {{t+|gl|escoller}}
+* Georgian: {{t|ka|გადაწყვეტა|sc=Geor}}
 * German: {{t+|de|entscheiden}}
 * Ilocano: {{t|ilo|pili}}
 * Irish: {{t|ga|togh}}
