--- a/en/旿/旿.16935.wikitext
+++ b/en/旿/旿.16935.wikitext
@@ -34,7 +34,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[hùn]] ([[hun4]]), [[wǔ]] ([[wu3]])|wg=hun<sup>4</sup>, wu<sup>3</sup>}}
+{{cmn-hanzi|pin=[[wǔ]] ([[wu3]])|wg=wu<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=日04}}
 
