/* Translingual */ wikilinked two words/terms in definition entries; added "ids=" ⿰日匀 (composition) data to /Han char/ template <昀#32855497>

--- a/en/昀/昀.16936.wikitext
+++ b/en/昀/昀.16936.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日心戈一 (APIM), 日心一一 (APMM)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日心戈一 (APIM), 日心一一 (APMM)|ids=⿰[[日]][[匀]]}}
 
-# sun light
-# used in personal names
+# [[sunlight]]
+# used in [[personal name]]s
 
 ====References====
 * {{Han ref|kx=0490.310|dkj=13781|dj=0851.300|hdz=21495.020|uh=6600|ud=26112|bh=A9FB|bd=43515}}
