--- a/en/昁/昁.16937.wikitext
+++ b/en/昁/昁.16937.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[bui3]]|y=bui3}}
+
+# {{defn|lang=yue|sort=日04}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
