/* Translingual */ added "ids=" ⿱日卬 (composition) data to /Han char/ template <昂#32855540>

--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6012<sub>7</sub>|canj=日竹女中 (AHVL)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6012<sub>7</sub>|canj=日竹女中 (AHVL)|ids=⿱[[日]][[卬]]}}
 
 # [[rise]], [[raise]]
 # [[proud]], [[bold]]
