--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -4,7 +4,7 @@
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6028<sub>1</sub>|canj=AMO|ids=⿱[[日]][[仄]]}}
 
 # [[afternoon]]
-# the sun in the afternoon [[sky]]
+# the [[sun]] in the afternoon [[sky]]
 # to [[decline]]
 
 ====References====
