added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=日04/ templates; added "References" section and nomfoundation.org link <昃#32855559>

--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -49,6 +49,18 @@
 
 # {{defn|lang=cmn|sort=日04}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=日04| hanviet = [[chắc]], [[trắc]]}}
+
+# {{defn|lang=vi|sort=日04}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6603 Nom Foundation]
+
 [[fr:昃]]
 [[ko:昃]]
 [[hu:昃]]
