--- a/en/昄/昄.16940.wikitext
+++ b/en/昄/昄.16940.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[baan2]]|y=baan2}}
+
+# {{defn|lang=yue|sort=日04}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
