--- a/en/昅/昅.16941.wikitext
+++ b/en/昅/昅.16941.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6704<sub>7</sub>|canj=日弓竹水 (ANHE)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6704<sub>7</sub>|canj=日弓竹水 (ANHE)|ids=⿰[[日]][[及]]}}
 
 # {{defn|Han|sort=日04}}
 
