--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -56,7 +56,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[mǐn]] ([[min3]]), [[shēng]] ([[sheng1]])|wg=min<sup>3</sup>, sheng<sup>1</sup>}}
+{{cmn-hanzi|pin=[[shēng]] ([[sheng1]])|wg=sheng<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=日04}}
 
