/* Translingual */ added "ids=" ⿰日户 (composition) data to /Han char/ template <昈#32855650>

--- a/en/昈/昈.16944.wikitext
+++ b/en/昈/昈.16944.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6300<sub>7</sub>|canj=日竹尸 (AHS), 日戈尸 (AIS)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6300<sub>7</sub>|canj=日竹尸 (AHS), 日戈尸 (AIS)|ids=⿰[[日]][[户]]}}
 
 # {{defn|Han|sort=日04}}
 
