--- a/en/昊/昊.16946.wikitext
+++ b/en/昊/昊.16946.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6043<sub>0</sub>|canj=日一大 (AMK)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6043<sub>0</sub>|canj=日一大 (AMK)|ids=⿱[[日]][[天]]}}
 
-# summer time
+# [[summertime]]
 # [[sky]]
 # [[heaven]]
 
