/* Translingual */ added "ids=" ⿱夭日 (composition) data to /Han char/ template <昋#32856024>

--- a/en/昋/昋.16947.wikitext
+++ b/en/昋/昋.16947.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=2060<sub>3</sub>|canj=竹大日 (HKA)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=2060<sub>3</sub>|canj=竹大日 (HKA)|ids=⿱[[夭]][[日]]}}
 
 # {{defn|Han|sort=日04}}
 
