--- a/en/昍/昍.16949.wikitext
+++ b/en/昍/昍.16949.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6600<sub>0</sub>|canj=日日 (AA), X日日 (XAA)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6600<sub>0</sub>|canj=日日 (AA), X日日 (XAA)|ids=⿰[[日]]日}}
 
 # {{defn|Han|sort=日04}}
 
