--- a/en/昒/昒.16954.wikitext
+++ b/en/昒/昒.16954.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[fat1]]|y=fat1}}
+
+# {{defn|lang=yue|sort=日04}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
