--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6022<sub>7</sub>|canj=日心竹竹 (APHH)|ids=⿱[[日]][[勿]]}}
 
-# [[change]]
+# to [[change]]
 # [[easy]]
 
 ====Derived characters====
@@ -18,12 +18,32 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ji6]], [[jik6]]|y=yi6, yik6}}
+===Pronunciation===
+{{zh-pron
+|m=yì
+|c=ji6,jik6
+|mc=y
+|oc=y
+|ma=
+|cat=v,a
+}}
 
-# {{defn|lang=yue|sort=日04}}
+===Definitions===
+# {{rfdef|lang=zh}}
+
+====Compounds====
+* [[易货贸易]]
+* [[易拉罐]]
+* [[易經]] / [[易经]] (yì jīng): [[I Ching]]
+* [[易燃物]]
+* [[易熔合金]]
+* [[易如反掌]]
+* [[易手]]
+* [[易于]]
+* [[易帜]]
 
 ----
 
@@ -54,32 +74,6 @@
 {{ko-hanja|hangeul=[[역]], [[이]]|eumhun=|rv=yeok, i|mr=yŏk, i|y=yek, i}}
 
 # {{defn|lang=ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yì]] ([[yi4]])|wg=i<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
-
-====Compounds====
-* [[易货贸易]]
-* [[易拉罐]]
-* [[易經]] / [[易经]] (yì jīng): [[I Ching]]
-* [[易燃物]]
-* [[易熔合金]]
-* [[易如反掌]]
-* [[易手]]
-* [[易于]]
-* [[易帜]]
-
-----
-
-==Middle Chinese==
-===Han character===
-'''易''' (*iɛ̀, iɛk)<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
 
 ----
 
