--- a/en/昕/昕.16957.wikitext
+++ b/en/昕/昕.16957.wikitext
@@ -54,9 +54,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''昕''' ([[hân]])
+{{vi-readings|rs=日04| hanviet = hân}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=日04}}
 
 [[Category:Vietnamese Han tu]]
 
