--- a/en/昖/昖.16958.wikitext
+++ b/en/昖/昖.16958.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日金戈 (ACI)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日金戈 (ACI)|ids=⿰[[日]][[公]]}}
 
 # {{defn|Han|sort=日04}}
 
