added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=日04/ templates; added "References" section and nomfoundation.org link <昗#32858883>

--- a/en/昗/昗.16959.wikitext
+++ b/en/昗/昗.16959.wikitext
@@ -32,6 +32,18 @@
 
 # {{defn|lang=cmn|sort=日04}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=日04| hanviet = dục}}
+
+# {{defn|lang=vi|sort=日04}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6617 Nom Foundation]
+
 [[fr:昗]]
 [[pl:昗]]
 [[zh:昗]]
