/* Translingual */ added "ids=" ⿱日方 (composition) data to /Han char/ template <昘#32858892>

--- a/en/昘/昘.16960.wikitext
+++ b/en/昘/昘.16960.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日卜竹尸 (AYHS), X日卜竹尸 (XAYHS)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日卜竹尸 (AYHS), X日卜竹尸 (XAYHS)|ids=⿱[[日]][[方]]}}
 
 # {{defn|Han|sort=日04}}
 
