--- a/en/昘/昘.16960.wikitext
+++ b/en/昘/昘.16960.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[fong2]]|y=fong2}}
+
+# {{defn|lang=yue|sort=日04}}
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
