--- a/en/昘/昘.16960.wikitext
+++ b/en/昘/昘.16960.wikitext
@@ -3,10 +3,12 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日卜竹尸 (AYHS), X日卜竹尸 (XAYHS)|ids=⿱[[日]][[方]]}}
 
-# {{defn|Han|sort=日04}}
+# (same as [[昉]]) [[bright]] [[dawn]], [[daybreak]]
+# [[appear]]
 
 ====References====
 * {{Han ref|kx=0492.121|dkj=13797|hdz=21496.030|uh=6618|ud=26136}}
+*[http://yedict.com/htm/66/6618.htm yedict.com (叶典)]
 
 ----
 
