--- a/en/昙/昙.16961.wikitext
+++ b/en/昙/昙.16961.wikitext
@@ -5,9 +5,9 @@
 {{Han simp|曇|f=雲|t=云}}.
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日一一戈 (AMMI)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日一一戈 (AMMI)|ids=⿱[[日]][[云]]}}
 
-# become cloudy, overcast
+# [[become]] [[cloudy]], [[overcast]]
 
 ====References====
 * {{Han ref|kx=0492.121|dkj=13824|hdz=21488.090|uh=6619|ud=26137}}
