--- a/en/昚/昚.16962.wikitext
+++ b/en/昚/昚.16962.wikitext
@@ -11,6 +11,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[san6]]|y=san6}}
+
+# {{defn|lang=yue|sort=日05}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
