--- a/en/昚/昚.16962.wikitext
+++ b/en/昚/昚.16962.wikitext
@@ -4,10 +4,11 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=大金日 (KCA)|ids=⿱[[𡗜]][[日]]}}
 
-# {{defn|Han|sort=日05}}
+# (same as [[慎]]) [[act]] with [[care]], [[be]] [[cautious]]
 
 ====References====
 * {{Han ref|kx=0492.130|dkj=13828|hdz=21499.060|uh=661A|ud=26138}}
+*[http://yedict.com/htm/66/661A.htm yedict.com (叶典)]
 
 ----
 
