--- a/en/昛/昛.16963.wikitext
+++ b/en/昛/昛.16963.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日尸尸 (ASS)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日尸尸 (ASS)|ids=⿰[[日]][[巨]]}}
 
 # {{defn|Han|sort=日05}}
 
