--- a/en/昛/昛.16963.wikitext
+++ b/en/昛/昛.16963.wikitext
@@ -26,6 +26,15 @@
 
 # {{defn|lang=cmn|sort=日05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=日05| hanviet = cữ}}
+
+# {{defn|lang=vi|sort=日05}}
+
 [[fr:昛]]
 [[pl:昛]]
 [[zh:昛]]
