--- a/en/昞/昞.16966.wikitext
+++ b/en/昞/昞.16966.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[bing2]], [[fong2]]|y=bing2, fong2}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
