converted "Cantonese" and "Mandarin" sections into unified "Chinese" section; removed "Middle Chinese" section (no longer needed) <映#32858988>

--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -12,12 +12,29 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=jing2|y=ying2}}
+===Pronunciation===
+{{zh-pron
+|m=yìng
+|c=jing2
+|mc=y
+|oc=y
+|ma=Zh-yìng.ogg
+|cat=v
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
+
+====Compounds====
+* [[映衬]]
+* [[映山红]]
+* [[映射]]
+* [[映托]]
+* [[映现]]
+* [[映照]]
 
 ----
 
@@ -45,35 +62,6 @@
 {{ko-hanja|hangeul=영|eumhun=|rv=yeong|mr=yŏng|y=yeng}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|Zh-yìng.ogg|Audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yìng]] ([[ying4]])|wg=ying<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
-
-====Compounds====
-* [[映衬]]
-* [[映山红]]
-* [[映射]]
-* [[映托]]
-* [[映现]]
-* [[映照]]
-
-----
-
-==Middle Chinese==
-
-===Han character===
-'''映''' (*qiæ̀ng)<!--note: asterisk indicates that this character occurs more than four times in the Tang Dynasty corpus of literature-->
-
-# {{defn|lang=ltc|sort=日05}}
 
 ----
 
