--- a/en/昡/昡.16969.wikitext
+++ b/en/昡/昡.16969.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6003<sub>2</sub>|canj=日卜女戈 (AYVI)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6003<sub>2</sub>|canj=日卜女戈 (AYVI)|ids=⿰[[日]][[玄]]}}
 
-# long day
+# [[long]] [[day]]
 # [[extended]]
 # [[relaxed]]
 
