added "Cantonese" section with /yue-hanzi/ (and associated jyutping & Cantonese Yale info) and /defn|lang=yue|sort=日05/ templates <昡#32859018>

--- a/en/昡/昡.16969.wikitext
+++ b/en/昡/昡.16969.wikitext
@@ -12,6 +12,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[jyun6]]|y=yun6}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
