--- a/en/昡/昡.16969.wikitext
+++ b/en/昡/昡.16969.wikitext
@@ -12,12 +12,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jyun6]]|y=yun6}}
+===Pronunciation===
+{{zh-pron
+|m=xuàn
+|c=jyun6
+|mc=
+|oc=
+|ma=
+|cat=n,a
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -39,15 +48,6 @@
 {{ko-hanja|hangeul=현|eumhun=|rv=hyeon|mr=hyŏn|y=hyen}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xuàn]] ([[xuan4]])|wg=hsüan<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昡]]
 [[hu:昡]]
