--- a/en/昢/昢.16970.wikitext
+++ b/en/昢/昢.16970.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6207<sub>7</sub>|canj=日山山 (AUU), X日山山 (XAUU)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6207<sub>7</sub>|canj=日山山 (AUU), X日山山 (XAUU)|ids=⿰[[日]][[出]]}}
 
 # {{defn|Han|sort=日05}}
 
