--- a/en/昢/昢.16970.wikitext
+++ b/en/昢/昢.16970.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[pěi]] ([[pei3]])|wg=p'ei<sup>3</sup>}}
+{{cmn-hanzi|pin=[[pò]] ([[po4]]), [[pèi]] ([[pei4]])|wg=p'o<sup>4</sup>, p'ei<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
