--- a/en/昢/昢.16970.wikitext
+++ b/en/昢/昢.16970.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[pui3]]|y=pui3}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
