/* Translingual */ added one definition entry and yedict.com reference link <昢#32859088>

--- a/en/昢/昢.16970.wikitext
+++ b/en/昢/昢.16970.wikitext
@@ -3,10 +3,11 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6207<sub>7</sub>|canj=日山山 (AUU), X日山山 (XAUU)|ids=⿰[[日]][[出]]}}
 
-# {{defn|Han|sort=日05}}
+# the [[sun]] or [[moon]] [[rising]]; the [[early]] sun (before it becomes [[bright]])
 
 ====References====
 * {{Han ref|kx=0493.030|dkj=13840|dj=0856.030|hdz=21504.060|uh=6622|ud=26146|bh=CEF1|bd=52977}}
+*[http://yedict.com/htm/66/6622.htm yedict.com (叶典)]
 
 ----
 
