--- a/en/昣/昣.16971.wikitext
+++ b/en/昣/昣.16971.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǔn]] ([[chun3]]), [[zhěn]] ([[zhen3]])|wg=ch'un<sup>3</sup>, chen<sup>3</sup>}}
+{{cmn-hanzi|pin=[[zhěn]] ([[zhen3]])|wg=chen<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
