added "Cantonese" section with /yue-hanzi/ (and associated jyutping & Cantonese Yale info) and /defn|lang=yue|sort=日05/ templates <昣#32859134>

--- a/en/昣/昣.16971.wikitext
+++ b/en/昣/昣.16971.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[can2]]|y=chan2}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
