--- a/en/昣/昣.16971.wikitext
+++ b/en/昣/昣.16971.wikitext
@@ -3,10 +3,14 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日人竹竹 (AOHH)|ids=⿰[[日]][[㐱]]}}
 
-# {{defn|Han|sort=日05}}
+# (same as [[明]]) [[bright]], [[light]], [[brilliant]]
+# [[clear]]
+# [[tomorrow]]
+# [[next]], [[following]]
 
 ====References====
 * {{Han ref|kx=0493.040|dkj=13842|dj=0856.050|hdz=21502.060|uh=6623|ud=26147}}
+*[http://yedict.com/htm/66/6623.htm yedict.com (叶典)]
 
 ----
 
