--- a/en/昤/昤.16972.wikitext
+++ b/en/昤/昤.16972.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6803<sub>7</sub>|canj=日人戈戈 (AOII)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6803<sub>7</sub>|canj=日人戈戈 (AOII)|ids=⿰[[日]][[令]]}}
 
 # [[sunshine]]
 
