--- a/en/昤/昤.16972.wikitext
+++ b/en/昤/昤.16972.wikitext
@@ -34,7 +34,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[līng]] ([[ling1]])|wg=ling<sup>1</sup>}}
+{{cmn-hanzi|pin=[[líng]] ([[ling2]])|wg=ling<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
