/* Vietnamese */ added "xoan" reading to /vi-hantu/ template; added nomfoundation.org link to "References" section <春#32859258>

--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -172,9 +172,12 @@ There are minor differences in where the last stroke of the top component (top-l
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[xuân]]|rs=日05}}
+{{vi-hantu|[[xoan]], [[xuân]]|rs=日05}}
 
 # {{defn|lang=vi|sort=日05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6625 Nom Foundation]
 
 [[ast:春]]
 [[zh-min-nan:春]]
