--- a/en/昦/昦.16974.wikitext
+++ b/en/昦/昦.16974.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>3</sub>|canj=日大中中 (AKLL)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>3</sub>|canj=日大中中 (AKLL)|ids=⿱[[日]][[夰]]}}
 
 # {{defn|Han|sort=日05}}
 
