--- a/en/昦/昦.16974.wikitext
+++ b/en/昦/昦.16974.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[hào]] ([[hao4]]), [[xū]] ([[xu1]]), [[xù]] ([[xu4]])|wg=hao<sup>4</sup>, hsü<sup>1</sup>, hsü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[hào]] ([[hao4]])|wg=hao<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
