--- a/en/昧/昧.16975.wikitext
+++ b/en/昧/昧.16975.wikitext
@@ -12,12 +12,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[mui6]]|y=mui6}}
+===Pronunciation===
+{{zh-pron
+|m=mèi
+|c=mui6
+|mc=y
+|oc=y
+|ma=
+|cat=a,v
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -40,15 +49,6 @@
 {{ko-hanja|hangeul=매|eumhun=|rv=mae|mr=mae|y=may}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mèi]] ([[mei4]])|wg=mei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 ----
 
