--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -13,12 +13,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zok3]], [[zok6]]|y=jok3, jok6}}
+===Pronunciation===
+{{zh-pron
+|m=zuó
+|c=zok3,zok6
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -53,15 +62,6 @@
 {{ko-hanja|hangeul=작|eumhun=|rv=jak|mr=chak|y=cak}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zuó]] ([[zuo2]])|wg=tso<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 ----
 
