--- a/en/昩/昩.16977.wikitext
+++ b/en/昩/昩.16977.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日木十 (ADJ)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日木十 (ADJ)|ids=⿰[[日]][[末]]}}
 
 # {{defn|Han|sort=日05}}
 
