--- a/en/昪/昪.16978.wikitext
+++ b/en/昪/昪.16978.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈廿 (AIT)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈廿 (AIT)|ids=⿱[[日]][[弁]]}}
 
 # [[delighted]]
 # [[pleased]]
