--- a/en/昪/昪.16978.wikitext
+++ b/en/昪/昪.16978.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[bin6]]|y=bin6}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
