--- a/en/昫/昫.16979.wikitext
+++ b/en/昫/昫.16979.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6702<sub>0</sub>|canj=日心口 (APR)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6702<sub>0</sub>|canj=日心口 (APR)|ids=⿰[[日]][[句]]}}
 
 # [[warm]]
 
