--- a/en/昬/昬.16980.wikitext
+++ b/en/昬/昬.16980.wikitext
@@ -27,7 +27,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[hūn]] ([[hun1]]), [[mǐn]] ([[min3]])|wg=hun<sup>1</sup>, min<sup>3</sup>}}
+{{cmn-hanzi|pin=[[hūn]] ([[hun1]])|wg=hun<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
