--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -52,7 +52,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xià]] ([[xia4]]), [[zhāo]] ([[zhao1]])|wg=hsia<sup>4</sup>, chao<sup>1</sup>}}
+{{cmn-hanzi|pin=[[zhāo]] ([[zhao1]])|wg=chao<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
