--- a/en/昮/昮.16982.wikitext
+++ b/en/昮/昮.16982.wikitext
@@ -3,10 +3,11 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6012<sub>7</sub>|canj=日一大尸 (AMKS)|ids=⿱[[日]][[功]]}}
 
-# {{defn|Han|sort=日05}}
+# [[successful]] [[people]] ([[worker]]s)
 
 ====References====
 * {{Han ref|kx=0493.230|dkj=13856|dj=0858.030|hdz=21499.010|uh=662E|ud=26158|bh=CEF8|bd=52984}}
+*[http://yedict.com/htm/66/662E.htm yedict.com (叶典)]
 
 ----
 
