--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -44,7 +44,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[yì]] ([[yi4]]), [[yù]] ([[yu4]])|wg=i<sup>4</sup>, yü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yù]] ([[yu4]])|wg=yü<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
