--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -11,12 +11,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[juk1]]|y=yuk1}}
+===Pronunciation===
+{{zh-pron
+|m=yù
+|c=juk1
+|mc=y
+|oc=y
+|ma=
+|cat=n,a
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,15 +47,6 @@
 {{ko-hanja|hangeul=욱|eumhun=|rv=uk|mr=uk|y=wuk}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yù]] ([[yu4]])|wg=yü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 ----
 
