--- a/en/昲/昲.16987.wikitext
+++ b/en/昲/昲.16987.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6502<sub>7</sub>|canj=日中中弓 (ALLN)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6502<sub>7</sub>|canj=日中中弓 (ALLN)|ids=⿰[[日]][[弗]]}}
 
 # {{defn|Han|sort=日05}}
 
