--- a/en/昲/昲.16987.wikitext
+++ b/en/昲/昲.16987.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[fèi]] ([[fei4]]), [[yì]] ([[yi4]])|wg=fei<sup>4</sup>, i<sup>4</sup>}}
+{{cmn-hanzi|pin=[[fèi]] ([[fei4]])|wg=fei<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
