--- a/en/昲/昲.16987.wikitext
+++ b/en/昲/昲.16987.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[fai3]]|y=fai3}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
