converted "Cantonese" and "Mandarin" sections into unified "Chinese" section and redirected to traditional character article using /zh-see/ template <昼#32861039>

--- a/en/昼/昼.16997.wikitext
+++ b/en/昼/昼.16997.wikitext
@@ -15,11 +15,12 @@
 ----
 
 ==Cantonese==
+{{zh-see|晝}}
 
-===Hanzi===
-{{yue-hanzi|jyut=zau3|y=jau3|tra=晝}}
-
-# {{defn|lang=yue|sort=日05}}
+====Compounds====
+* [[昼伏夜游]]
+* [[昼夜]]
+* [[昼夜兼行]]
 
 ----
 
@@ -52,29 +53,6 @@
 
 [[Category:1000 Japanese basic words|ひる]]
 [[Category:ja:Time|ひる]]
-
-----
-
-==Korean==
-
-===Hanja===
-{{ko-hanja|hangeul=주|eumhun=|rv=ju|mr=chu|y=cwu}}
-
-# {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=晝|pin=[[zhòu]] ([[zhou4]])|wg=chou<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
-
-====Compounds====
-* [[昼伏夜游]]
-* [[昼夜]]
-* [[昼夜兼行]]
 
 [[fr:昼]]
 [[ko:昼]]
