t+alt:[[качы]] ([[WT:EDIT|Assisted]]) <secretary#32862371>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -74,6 +74,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Russian: {{t+|ru|секрета́рь|m|f|tr=sekretár’}}, {{t+|ru|секрета́рша|f|tr=sekretárša}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian: {{t|sh|tȃjnīk|m}}, {{t|sh|tȃjnica|f}}
+* Southern Altai: {{t|alt|качы|tr=kaçı|sc=Cyrl}}
 * Spanish: {{t+|es|secretario|m}}, {{t|es|secretaria|f}}
 * Swahili: {{t+|sw|karani}}
 * Swedish: {{t+|sv|sekreterare|c}}
