/* Translations */ Hebrew <et cetera#32867369>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -56,7 +56,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 * Galician: {{t|gl|etcétera}}
 * German: {{t+|de|und so weiter}}, {{t+|de|usw.}}, {{t+|de|etc.}}, {{t+|de|et cetera}}
 * Greek: {{t|el|και ούτω καθεξής|tr=kai oúto kathexís}}, {{t+|el|κοκ|tr=kok}}
-* Hebrew: {{t|he|וכדומה|sc=Hebr}}
+* Hebrew: {{t|he|וְכַדּוֹמֶה|sc=Hebr}}, {{t|he|וְכוּלֵּי}}
 * Hindi: {{t|hi|वग़ैरह|tr=vaġairah|sc=Deva}}
 * Hungarian: {{t+|hu|satöbbi}}, {{t+|hu|stb.}}, {{t|hu|és a többi}}, {{t|hu|s a többi}}, {{t|hu|és így tovább}}
 * Icelandic: {{t+|is|og svo framvegis}}, {{t|is|o. s. frv.}}
