t+so:[[Faransa]] ([[WT:EDIT|Assisted]]) <France#32872859>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -163,6 +163,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Sinhalese: {{t|si|ප්‍රංශය}}
 * Slovak: {{t|sk|Francúzsko|n}}
 * Slovene: {{t|sl|Fráncija|f}}
+* Somali: {{t|so|Faransa}}
 * Sotho: {{t|st|France}}
 * Spanish: {{t+|es|Francia|f}}
 * Swahili: {{t+|sw|Ufaransa}}
