--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -54,7 +54,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 ====Translations====
 {{trans-top|woody part of a tree arising from the trunk and usually dividing}}
 * Albanian: {{t|sq|degë|f}}
-* Arabic: {{t|ar|فرع|m|tr=farʿ|sc=Arab}}
+* Arabic: {{t|ar|فَرْع|m|sc=Arab}}
 * Armenian: {{t|hy|ճյուղ}}, {{t|hy|ոստ}}
 *: Old Armenian: {{t|xcl|ճիւղ|sc=Armn}}, {{t|xcl|ոստ|sc=Armn}}, {{t|xcl|կողր|sc=Armn}}
 * Asturian: {{t|ast|rama|f}}
@@ -79,7 +79,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Greek: {{t+|el|κλαδί|n|sc=Grek}}, {{t+|el|κλαρί|n|sc=Grek}}
 * Haitian Creole: {{t|ht|branch}}
-* Hebrew: {{t|he|ענף|m|tr=anaf}}
+* Hebrew: {{t|he|עָנָף|m|tr=anaf}}
 * Hindi: {{t|hi|डाल|f|tr=ḍāl|sc=Deva}}
 * Hungarian: {{t+|hu|ág}}
 * Ido: {{t+|io|brancho}}
