t+da:[[gren]] t+is:[[grein]] t-balance t+yi:[[צווייַג]] t+az:[[budaq]] t+ky:[[бутак]] t+ky:[[шак]] t+tg:[[шоха]] t+tg:[[шох]] t+tk:[[pudak]] t+mn:[[мөчир]] t+hi:[[शाख़]] t+ur:[[شاخ]] ([[WT:EDIT|Assisted]]) <branch#32880524>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Armenian: {{t|hy|ճյուղ}}, {{t|hy|ոստ}}
 *: Old Armenian: {{t|xcl|ճիւղ|sc=Armn}}, {{t|xcl|ոստ|sc=Armn}}, {{t|xcl|կողր|sc=Armn}}
 * Asturian: {{t|ast|rama|f}}
+* Azeri: {{t+|az|budaq}}
 * Bashkir: {{t|ba|ботаҡ}}
 * Basque: {{t|eu|adar}}
 * Belarusian: {{t|be|галіна́|f|sc=Cyrl}}, {{t|be|галі́нка|f|sc=Cyrl}}
@@ -68,6 +69,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Classical Nahuatl: {{t|nci|cuammāitl}}
 * Czech: {{t+|cs|větev|f}}
 * Dalmatian: {{t|dlm|ruoma|f}}
+* Danish: {{t+|da|gren|c}}
 * Dutch: {{t+|nl|tak}}
 * Esperanto: {{t+|eo|branĉo}}
 * Estonian: {{t+|et|oks}}
@@ -80,8 +82,9 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Greek: {{t+|el|κλαδί|n|sc=Grek}}, {{t+|el|κλαρί|n|sc=Grek}}
 * Haitian Creole: {{t|ht|branch}}
 * Hebrew: {{t|he|עָנָף|m|tr=anaf}}
-* Hindi: {{t|hi|डाल|f|tr=ḍāl|sc=Deva}}
+* Hindi: {{t|hi|डाल|f|tr=ḍāl|sc=Deva}}, {{t|hi|शाख़|sc=Deva}}
 * Hungarian: {{t+|hu|ág}}
+* Icelandic: {{t+|is|grein|f}}
 * Ido: {{t+|io|brancho}}
 * Indonesian: {{t+|id|dahan}}
 * Italian: {{t+|it|ramo}}
@@ -92,6 +95,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Korean: {{t+|ko|나뭇가지|sc=Kore}}, {{t+|ko|가지|sc=Kore}}, {{t+|ko|줄기|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|چرۆ}}, {{t+|ku|لق}}
+* Kyrgyz: {{t+|ky|бутак|sc=Cyrl}}, {{t+|ky|шак|sc=Cyrl}}
 * Latgalian: {{t|ltg|zors|m}}
 {{trans-mid}}
 * Latin: {{t|la|rāmus}}
@@ -99,6 +103,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Lithuanian: {{t+|lt|šaka|f}}
 * Macedonian: {{t|mk|гранка|n}}
 * Malay: {{t|ms|dahan}}
+* Mongolian: {{t+|mn|мөчир|sc=Cyrl}}
 * Navajo: {{t|nv|tsin bigaan}}, {{t|nv|atsʼáozʼaʼ}}
 * Ngazidja Comorian: {{t|zdj|ndravu|c9|c10}}
 * Norwegian: {{t+|no|gren|m}}, {{t+|no|grein|m}}
@@ -123,15 +128,19 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Swahili: {{t+|sw|tanzu}}
 * Swedish: {{t+|sv|gren|c}}
 * Tagalog: {{t|tl|sanga}}
+* Tajik: {{t+|tg|шоха|sc=Cyrl}}, {{t+|tg|шох|sc=Cyrl}}
 * Tamil: {{t+|ta|கிளை|sc=Taml}}
 * Telugu: {{t+|te|కొమ్మ|sc=Telu}}, {{t+|te|శాఖ|sc=Telu}}
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}
+* Turkmen: {{t|tk|pudak}}
 * Udi: {{t|udi|чӏугъ}}
 * Ukrainian: {{t|uk|ві́тка|f|sc=Cyrl}}, {{t+|uk|галу́зь|f|sc=Cyrl}}, {{t|uk|галу́зка|f|sc=Cyrl}}, {{t|uk|гі́лка|f|sc=Cyrl}}, {{t|uk|гі́лочка|f|sc=Cyrl}}
+* Urdu: {{t|ur|شاخ|tr=śāx|sc=ur-Arab}}
 * Uzbek: {{t+|uz|boʻlim}}
 * Vietnamese: {{t+|vi|nhánh}}
 * Walloon: {{t+|wa|coxhe|f}}
+* Yiddish: {{t|yi|צווייַג|m|sc=Hebr}}
 * ǃXóõ: {{qualifier|small one}} {{t|nmn|gǀkxʻāa-kú}}
 {{trans-bottom}}
 
