t+af:[[tak]] t-balance ([[WT:EDIT|Assisted]]) <branch#32880528>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -53,6 +53,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 
 ====Translations====
 {{trans-top|woody part of a tree arising from the trunk and usually dividing}}
+* Afrikaans: {{t+|af|tak}}
 * Albanian: {{t|sq|degë|f}}
 * Arabic: {{t|ar|فَرْع|m|sc=Arab}}
 * Armenian: {{t|hy|ճյուղ}}, {{t|hy|ոստ}}
@@ -96,8 +97,8 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Kurdish:
 *: Sorani: {{t|ku|چرۆ}}, {{t+|ku|لق}}
 * Kyrgyz: {{t+|ky|бутак|sc=Cyrl}}, {{t+|ky|шак|sc=Cyrl}}
-* Latgalian: {{t|ltg|zors|m}}
 {{trans-mid}}
+* Latgalian: {{t|ltg|zors|m}}
 * Latin: {{t|la|rāmus}}
 * Latvian: {{t+|lv|zars|m}}
 * Lithuanian: {{t+|lt|šaka|f}}
