t+th:[[กิ่ง]] t-balance t+bn:[[শাখা]] t+hi:[[शाखा]] t+lo:[[ກິ່ງ]] t+km:[[{{t-needed}}]] t+my:[[{{t-needed}}]] t+vi:[[ngành]] ([[WT:EDIT|Assisted]]) <branch#32880539>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -63,7 +63,9 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Bashkir: {{t|ba|ботаҡ}}
 * Basque: {{t|eu|adar}}
 * Belarusian: {{t|be|галіна́|f|sc=Cyrl}}, {{t|be|галі́нка|f|sc=Cyrl}}
+* Bengali: {{t|bn|শাখা|tr=shakha|sc=Beng}}
 * Bulgarian: {{t+|bg|клон|m}}
+* Burmese: {{t-needed|my}}
 * Catalan: {{t+|ca|branca|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|支|tr=zhī|sc=Hani}}, {{t|cmn|樹枝|sc=Hani}}, {{t+|cmn|树枝|tr=shùzhī|sc=Hani}}
@@ -83,7 +85,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Greek: {{t+|el|κλαδί|n|sc=Grek}}, {{t+|el|κλαρί|n|sc=Grek}}
 * Haitian Creole: {{t|ht|branch}}
 * Hebrew: {{t|he|עָנָף|m|tr=anaf}}
-* Hindi: {{t|hi|डाल|f|sc=Deva}}, {{t|hi|शाख़|sc=Deva}}
+* Hindi: {{t|hi|डाल|f|sc=Deva}}, {{t|hi|शाख़|sc=Deva}}, {{t|hi|शाखा|sc=Deva}}
 * Hungarian: {{t+|hu|ág}}
 * Icelandic: {{t+|is|grein|f}}
 * Ido: {{t+|io|brancho}}
@@ -92,12 +94,14 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Japanese: {{t+|ja|枝|tr=えだ, eda|sc=Jpan}}
 * Norman: {{t|nrf|branque|f}}
 * Kazakh: {{t|kk|бұтақ|sc=Cyrl}}
+* Khmer: {{t-needed|km}}
 * Kiput: {{t|kyi|din}}
 * Korean: {{t+|ko|나뭇가지|sc=Kore}}, {{t+|ko|가지|sc=Kore}}, {{t+|ko|줄기|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|چرۆ}}, {{t+|ku|لق}}
 * Kyrgyz: {{t+|ky|бутак|sc=Cyrl}}, {{t+|ky|шак|sc=Cyrl}}
 {{trans-mid}}
+* Lao: {{t+|lo|ກິ່ງ|sc=Laoo}}
 * Latgalian: {{t|ltg|zors|m}}
 * Latin: {{t|la|rāmus}}
 * Latvian: {{t+|lv|zars|m}}
@@ -132,6 +136,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Tajik: {{t+|tg|шоха|sc=Cyrl}}, {{t+|tg|шох|sc=Cyrl}}
 * Tamil: {{t+|ta|கிளை|sc=Taml}}
 * Telugu: {{t+|te|కొమ్మ|sc=Telu}}, {{t+|te|శాఖ|sc=Telu}}
+* Thai: {{t+|th|กิ่ง|tr=gìng|sc=Thai}}
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}
 * Turkmen: {{t|tk|pudak}}
@@ -139,7 +144,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Ukrainian: {{t|uk|ві́тка|f|sc=Cyrl}}, {{t+|uk|галу́зь|f|sc=Cyrl}}, {{t|uk|галу́зка|f|sc=Cyrl}}, {{t|uk|гі́лка|f|sc=Cyrl}}, {{t|uk|гі́лочка|f|sc=Cyrl}}
 * Urdu: {{t|ur|شاخ|tr=śāx|sc=ur-Arab}}
 * Uzbek: {{t+|uz|boʻlim}}
-* Vietnamese: {{t+|vi|nhánh}}
+* Vietnamese: {{t+|vi|nhánh}}, {{t+|vi|ngành}}
 * Walloon: {{t+|wa|coxhe|f}}
 * Yiddish: {{t|yi|צווייַג|m|sc=Hebr}}
 * ǃXóõ: {{qualifier|small one}} {{t|nmn|gǀkxʻāa-kú}}
