t+lo:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <pull#32881874>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -154,6 +154,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Korean: {{t+|ko|끌다|sc=Hang}}, {{t+|ko|뽑다|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|ڕاکێشه‌}}
+* Lao: {{t-needed|lo}}
 * Latin: {{t|la|vello}}, {{t+|la|traho}}
 {{trans-mid}}
 * Lojban: {{t|jbo|lacpu}}
