/* Translations */ BA <curtain#32965256>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -50,6 +50,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Armenian: {{t|hy|վարագույր}}
 * Asturian: {{t|ast|cortina|f}}
 * Azeri: {{t+|az|pərdə}}
+* Bashkir: {{t|ba|пәрҙә|sc=Cyrl}}
 * Belarusian: {{t|be|засло́на|f|sc=Cyrl}}, {{t|be|фіра́нка|f|sc=Cyrl}}, {{t|be|занаве́ска|f|sc=Cyrl}}, {{t|be|карты́на|f|sc=Cyrl}}
 * Bengali: {{t|bn|পরদা|tr=pôrda|sc=Beng}}
 * Bulgarian: {{t+|bg|перде́|n}}, {{t+|bg|заве́са|f}}
@@ -142,6 +143,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 
 {{trans-top|piece of cloth in a theater}}
 * Armenian: {{t|hy|վարագույր}}
+* Bashkir: {{t|ba|шаршау|sc=Cyrl}}
 * Bulgarian: {{t+|bg|заве́са|f}}
 * Catalan: {{t|ca|teló|m}}
 * Chinese:
