t+ab:[[Алмантәыла]] t+als:[[<strong class="error"><span class="scribunto-error" id="mw-scribunto-error-1">Lua error in Module:languages/templates at line 28: The language code 'als' is not valid.</span></strong>]] ([[WT:EDIT|Assisted]]) <Germany#33000659>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -107,9 +107,11 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 ====Translations====
 {{trans-top|country in Central Europe}}
 * Abenaki: {{t|abe|Alemônki}}
+* Abkhaz: {{t|ab|Алмантәыла|sc=Cyrl}}
 * Acehnese: {{t|ace|Jeureuman}}
 * Afrikaans: {{t+|af|Duitsland}}
 * Albanian: {{t+|sq|Gjermania}}
+*: Tosk: The language code 'als' is not valid.</span></strong>|alt=Dytschland}}
 * Amharic: {{t|am|ጀርመን|tr=ǧärəmänə|sc=Ethi}}
 * Arabic: {{t+|ar|ألمانيا|f|tr='almaanya}}
 * Aragonese: {{t|an|Alemanya|f}}
