t+bar:[[Taitšlont]] ([[WT:EDIT|Assisted]]) <Germany#33000665>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -121,7 +121,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Azeri: {{t+|az|Almaniya}}
 * Bashkir: {{t|ba|Германия|tr=Germaniya|sc=Cyrl}}
 * Basque: {{t+|eu|Alemania}}
-* Bavarian: {{t|bar|Deitschland}}
+* Bavarian: {{t|bar|Deitschland}}, {{t|bar|Taitšlont}} {{qualifier|Gottscheerisch}}
 * Belarusian: {{t|be|Германія|f|tr=Hermánija}}, {{t|be|Нямеччына|f|tr=Njaméččyna|sc=Cyrl}}
 * Bengali: {{t|bn|জার্মানি|tr=jarmani}}
 * Breton: {{t|br|Alamagn}}
