t+bug:[[Jerman]] ([[WT:EDIT|Assisted]]) <Germany#33000707>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -130,6 +130,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Bikol Central: {{t|bcl|Alemanya}}
 * Bishnupriya Manipuri: {{t|bpy|জার্মানি}}
 * Breton: {{t|br|Alamagn}}
+* Buginese: {{t|bug|Jerman}}
 * Bulgarian: {{t+|bg|Германия|f|tr=Germánija}}
 * Burmese: {{t|my|ဂျာမနီနိုင်ငံ|tr=gyamăninaingngan}}
 * Catalan: {{t+|ca|Alemanya|f}}, {{t+|ca|Alemània|f}}
