t+ht:[[Almay]] ([[WT:EDIT|Assisted]]) <Germany#33000709>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -158,6 +158,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 *: Alemannic German: {{t|gsw|Dytschland}}
 * Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
 * Gujarati: {{t|gu|જર્મની|tr=jarmanī|sc=Gujr}}
+* Haitian Creole: {{t|ht|Almay}}
 * Hausa: {{t|ha|Jamus|f|alt=Jāmùs}}
 * Hawaiian: {{t|haw|Kelemānia}}, {{t|haw|Koekelana}}
 * Hebrew: {{t|he|גרמניה|f|tr=Germania}}
