t+new:[[जर्मनी]] ([[WT:EDIT|Assisted]]) <Germany#33000719>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -171,6 +171,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Irish: {{t|ga|Gearmáin|alt=an Ghearmáin|f}}
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
+* Newari: {{t|new|जर्मनी}}
 * Norman: {{t|nrf|Allémangne|f}}
 * Kannada: {{t+|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda}}
 * Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
