t+war:[[Alemanya]] t+vls:[[Duutsland]] ([[WT:EDIT|Assisted]]) <Germany#33000722>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -259,7 +259,9 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Võro: {{t|vro|S'aksamaa}}
 * Wallisian: {{t|wls|Siamani}}
 * Walloon: {{t+|wa|Almagne|f}}
+* Waray-Waray: {{t|war|Alemanya}}
 * Welsh: {{t+|cy|Almaen|f}}
+* West Flemish: {{t|vls|Duutsland}}
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Xhosa: {{t|xh|iJamani|c5}}
 * Yiddish: {{t|yi|דײַטשלאַנד|n|tr=Daytshland, Dajtschland|sc=Hebr}}
