t+uz:[[Germaniya]] t+vec:[[Germania]] ([[WT:EDIT|Assisted]]) <Germany#33000727>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -252,7 +252,8 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna}}
 * Urdu: {{t|ur|جرمنی|m|tr=jarmanī|sc=ur-Arab}}
 * Uyghur: {{t|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab}}
-* Uzbek: {{t+|uz|Olmoniya}}
+* Uzbek: {{t+|uz|Olmoniya}}, {{t+|uz|Germaniya}}
+* Venetian: {{t|vec|Germania}}
 * Vietnamese: {{t|vi|nước Đức}}, {{t+|vi|Đức}} ({{t|vi|德|sc=Hani}})
 * Vilamovian: {{t|wym|Daojćłaond}}
 * Volapük: {{t+|vo|Deutän}}, {{qualifier|obsolete}} {{t|vo|Deut}}
