t+ie:[[Germania]] t+ig:[[Jémanị]] t+gn:[[Alemaña]] ([[WT:EDIT|Assisted]]) <Germany#33000745>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -158,6 +158,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 *: Alemannic German: {{t|gsw|Dytschland}}
 *: Palatinate German: {{t|pfl|Daitschlond}}
 * Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
+* Guaraní: {{t|gn|Alemaña}}
 * Gujarati: {{t|gu|જર્મની|tr=jarmanī|sc=Gujr}}
 * Haitian Creole: {{t|ht|Almay}}
 * Hausa: {{t|ha|Jamus|f|alt=Jāmùs}}
@@ -166,8 +167,10 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Hindi: {{t+|hi|जर्मनी|m|tr=jarmanī}}
 * Hungarian: {{t+|hu|Németország}}
 * Icelandic: {{t+|is|Þýskaland|n}}
+* Igbo: {{t|ig|Jémanị}}
 * Indonesian: {{t|id|Jerman}}
 * Interlingua: {{t+|ia|Germania}}
+* Interlingue: {{t|ie|Germania}}
 * Irish: {{t|ga|Gearmáin|alt=an Ghearmáin|f}}
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
