t+ary:[[رعد]] ([[WT:EDIT|Assisted]]) <thunder#33009535>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -50,6 +50,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Abkhaz: {{t|ab|aдыд|sc=Cyrl}}
 * Albanian: {{t+|sq|bubullimë|f}}
 * Arabic: {{t+|ar|رعد|m|tr=raʿd}}
+*: Moroccan Arabic: {{t|ary|رْعد|m|tr=rʿəd}}
 * Armenian: {{t|hy|որոտ|sc=Armn}}
 * Asturian: {{t|ast|troníu|m}}, {{t|ast|tronabríu|m}}, {{t|ast|tronada|f}}, {{t|ast|truenu|m}}, {{t|ast|renuberu|m}}
 * Belarusian: {{t|be|гром|m|tr=hrom|sc=Cyrl}}
