t+iu:[[ᔮᒪᓂ]] t+stq:[[Düütsklound]] ([[WT:EDIT|Assisted]]) <Germany#33036878>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -173,6 +173,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Indonesian: {{t|id|Jerman}}
 * Interlingua: {{t+|ia|Germania}}
 * Interlingue: {{t|ie|Germania}}
+* Inuktitut: {{t|iu|ᔮᒪᓂ|sc=Cans}}
 * Irish: {{t|ga|Gearmáin|alt=an Ghearmáin|f}}
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
@@ -239,6 +240,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Romanian: {{t+|ro|Germania|f}}
 * Russian: {{t+|ru|Германия|f|tr=Germánija}}
 * Samogitian: {{t|sgs|Vuokītėjė}}
+* Saterland Frisian: {{t|stq|Düütsklound}}
 * Scottish Gaelic: {{t|gd|Gearmailt|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Немачка|f|sc=Cyrl}}
