t+lou:[[Alman]] ([[WT:EDIT|Assisted]]) <Germany#33037709>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -204,6 +204,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Lithuanian: {{t+|lt|Vokietija|f}}
 * Livonian: {{t|liv|Saksāmō}}
 * Lombard: {{t|lmo|Germania}}
+* Louisiana Creole French: {{t|lou|Alman}}
 * Low German: {{t+|nds|Düütschland|n}}, {{t|nds|Düüdschland|n}}
 * Luganda: {{t|lg|Girimane}}
 * Luhya: {{t|luy|Jamani}}
